Finished initial verison

--- a/5-4.md
+++ b/5-4.md
@@ -1,14 +1,32 @@
 
 #	5. Modes
-##	   Visual mode tricks
+##	   Visual mode & external commands (:!)
 
-        o		other end of selection 😍
+	Go together like two things that go together really well
 
-        O		other other end (blockwise)
+        :'<,'>!wc
+        :'<,'>!column 
+        :'<,'>!tr ' ' \\n | sort | uniq -c
 
-        gctrl-A		sequentially add 1, 2, 3, ... each line
+        '<,'> indicates that the command is operating over the
+	range of the visual selection
 
-        $		end-of-all-lines
-
-        I A		insert, append on every line (blockwise)
+operate
+distinguish
+verify
+untangle
+devise
+remove
+witwanton
+degauss
+bask
+verify
+scurryfunge
+enter
+deceive
+berate
+consume
+verify
+insussurate
+rewind
 
